# SeeByEyes

SeeByEyes/: CMakeLists.txt
SeeByEyes/cmake/: CMakeExternalLibs.cmake
SeeByEyes/libs/: CMakeLists.txt
SeeByEyes/libs/DB/: CMakeLists.txt
SeeByEyes/libs/DB/include/: CMakeLists.txt  abstractgeom.h  box3d.h  db.h  point3d.h  vertexid.h
SeeByEyes/libs/DB/src/: CMakeLists.txt  abstractgeom.cpp  box3d.cpp  point3d.cpp
SeeByEyes/src/: CMakeLists.txt  SBEApp.cpp  SBEApp.h  main.cpp  mainwindow.cpp  mainwindow.h
SeeByEyes/src/ui_templates/: ui_mainwindow.h
